Vue - js 150page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu">
+  <link rel="apple-touch-icon" sizes="57x57" href="src/assets/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="src/assets/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="src/assets//apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="src/assets//apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="src/assets//apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="src/assets//apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="src/assets//apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="src/assets//apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="src/assets//apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="src/assets//android-icon-192x192.png">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
     <title>Vue.js Todo</title>
   </head>
   <body>
