--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <title>Vue.js Todo</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+    </div>
     <script src="/dist/build.js"></script>
   </body>
 </html>
